--- a/src/components/alertView/AlertView.css
+++ b/src/components/alertView/AlertView.css
@@ -1,6 +1,19 @@
-.container {
+.alertbox {
+  height: var(--alertbox-height);
+  width: var(--alertbox-width);
+  background-color: white;
   text-align: left;
-  padding-left: 10px;
-  border: 1px solid black;
-  margin: 0 20% 0 20%;
+  padding: 10px;
+  margin: auto;
+  box-shadow: 0px 1px 3px 1px #B6B6B6;
+}
+
+body {
+  background-color: var(--uninett-light-grey)
+}
+
+.container {
+  height: calc(100vh - var(--header-height));
+  display: flex;
+  align-items: center;
 }
