:lipstick: change alertbox width

--- a/src/variables.css
+++ b/src/variables.css
@@ -4,5 +4,5 @@
     --uninett-light-grey: #EBEBEB;
     --header-height: 9vh;
     --alertbox-height: 50vh;
-    --alertbox-width: 60vh;
+    --alertbox-width: 70vW;
 }
