--- a/src/components/alertView/AlertView.css
+++ b/src/components/alertView/AlertView.css
@@ -1,10 +1,9 @@
 .alertbox {
-  height: var(--alertbox-height);
   width: var(--alertbox-width);
   background-color: white;
   text-align: left;
   padding: 10px;
-  margin: auto;
+  margin-left: calc(calc(100vw - var(--alertbox-width)) * 0.5);
   box-shadow: 0px 1px 3px 1px #B6B6B6;
 }
 
