--- a/src/views/alertView/AlertView.css
+++ b/src/views/alertView/AlertView.css
@@ -1,16 +1,15 @@
 .alertbox {
+  word-wrap: break-word;
   width: var(--alertbox-width);
   background-color: white;
   text-align: left;
   padding: 10px;
   margin-left: calc(calc(100vw - var(--alertbox-width)) * 0.5);
-  box-shadow: 0px 1px 3px 1px #B6B6B6;
+  box-shadow: 0px 1px 3px 1px #b6b6b6;
 }
-
 body {
-  background-color: var(--uninett-light-grey)
+  background-color: var(--uninett-light-grey);
 }
-
 .container {
   height: calc(100vh - var(--header-height));
   display: flex;
