--- a/src/colorscheme.css
+++ b/src/colorscheme.css
@@ -1,14 +1,10 @@
 :root{
-    --uninett-red: #EE3243;
-    --uninett-dark-blue: #192831;
-    --uninett-light-grey: #EBEBEB;
-    --header-height: 9vh;
-    --alertbox-height: 50vh;
-    --alertbox-width: 70vW;
     --primary: #fdd835;
     --primary-light: #ffff6b;
     --primary-dark: #c6a700;
     --secondary: #f91182;
     --secondary-light: #ff5fb1;
     --secondary-dark: #c00056;
+    --background: #E1E2E1;
+    --text: #434343;
 }
