--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: var(--uninett-dark-blue);
+    background-color: var(--primary);
     height: var(--header-height);
 }
 
@@ -7,8 +7,9 @@
     margin: 0;
 }
 
-.navlogo {
-    --logomargin: 1.7vh;
+.logo {
+    --logomargin: 0.6vh;
+    color: var(--primary-darker);
     height: calc(var(--header-height) - calc(var(--logomargin) * 2));
     margin-top: calc(var(--logomargin));
     margin-left: calc(var(--logomargin) * 2);
