--- a/src/views/loginView/LoginView.css
+++ b/src/views/loginView/LoginView.css
@@ -3,7 +3,7 @@
     --loginbox-width: 30vw;
     --loginbox-height: 30vh;
     text-align: center;
-    background-color: white;
+    background-color: var(--primary-light);
     display: flex;
     flex-direction: column;
     padding-bottom: 5vh;
