:lipstick: fix responsive design on login-view

--- a/src/colorscheme.css
+++ b/src/colorscheme.css
@@ -1,7 +1,7 @@
 :root{
     --primary: #19647E;
     --primary-light: #96B8C4;
-    --primary-dark: #0E3745;
+    --primary-dark: #13495C;
     --secondary: #F3B61F;
     --secondary-light: #F7D070;
     --secondary-dark: #9B7414;
