--- a/src/colorscheme.css
+++ b/src/colorscheme.css
@@ -1,6 +1,7 @@
 :root{
     --primary: #19647E;
     --primary-light: #96B8C4;
+    --primary-lighter: #F5F8F9;
     --primary-dark: #13495C;
     --secondary: #F3B61F;
     --secondary-light: #F7D070;
