:lipstick: style 404 page

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,13 @@ code {
     monospace;
 }
 
+#not-found {
+  text-align: center;
+  height: calc(100vh - var(--header-height));
+}
+
+#not-found h1 {
+  font-size: 50pt;
+  color: var(--secondary);
+  margin-top: 100px;
+}
