--- a/src/colorscheme.css
+++ b/src/colorscheme.css
@@ -5,7 +5,7 @@
     --primary-dark: #13495C;
     --secondary: #F3B61F;
     --secondary-light: #F7D070;
-    --secondary-dark: #9B7414;
+    --secondary-dark: #C98200;
     --background: #fff;
     --text: #434343;
     --white: #fff;
