--- a/src/components/active-profiles/ActiveProfile.css
+++ b/src/components/active-profiles/ActiveProfile.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 580px;
+  width: 80%;
   height: 50px;
   border: 1px solid lightblue;
   margin: auto;
