--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -7,7 +7,6 @@
   justify-content: space-around;
   align-items: center;
   width: 85%;
-  height: 50px;
   margin: auto;
   margin-top: 10px;
   border: 1px solid lightgrey;
@@ -18,6 +17,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 30vw;
 }
 .check-box {
   display: flex;
@@ -27,7 +27,7 @@
 }
 .timeslot-dropdown {
   margin-left: 5px;
-  width: 30vw;
+  width: 28vw;
 }
 .buttons-container {
   display: flex;
@@ -37,9 +37,11 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 30vw;
 }
 .filter-dropdown {
-  width: 14vw;
+  min-width: 25vw;
+  max-width: 30vw;
   margin-left: 5px;
 }
 
