--- a/src/components/react-table/table.css
+++ b/src/components/react-table/table.css
@@ -12,7 +12,7 @@
   );
   width: 80vw;
   height: var(--table-height);
-  box-shadow: 0px 1px 5px 1px #b6b6b6;
+  box-shadow: 0px 1px 5px 1px #b6b6e6;
   border: none !important;
   border-radius: 5px;
   z-index: 0;
