--- a/src/views/alertView/AlertView.css
+++ b/src/views/alertView/AlertView.css
@@ -5,7 +5,7 @@
   text-align: left;
   padding: 10px;
   margin-left: calc(calc(100vw - var(--alertbox-width)) * 0.5);
-  box-shadow: 0px 1px 3px 1px #b6b6b6;
+  box-shadow: 0px 1px 5px 1px #b6b6e6;
 }
 
 .container {
