--- a/src/components/filterBuilder/FilterBuilder.css
+++ b/src/components/filterBuilder/FilterBuilder.css
@@ -12,7 +12,7 @@
   grid-area: filter;
   border: 1px solid lightgrey;
   border-radius: 5px;
-  box-shadow: 0px 1px 5px 1px #b6b6e6;
+  box-shadow: 0px 1px 5px 1px #c5c5df;
   margin-top: 5vh;
 }
 
