:lipstick: color changes

--- a/src/components/react-table/table.css
+++ b/src/components/react-table/table.css
@@ -40,6 +40,13 @@
 
 }
 
+.ReactTable a {
+  color: var(--text);
+}
+.ReactTable a:visited {
+  color: var(--primary);
+}
+
 .-odd {
   background-color: var(--primary-lighter);
 }
