--- a/src/components/profileList/ProfileList.css
+++ b/src/components/profileList/ProfileList.css
@@ -2,3 +2,10 @@
   padding-top: 20px;
   margin: auto;
 }
+.filtername-box [class*="multiValue"] {
+  color: white;
+  background-color: var(--primary);
+}
+.filtername-box [class*="multiValue"] div {
+  color: white;
+}
