--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -81,14 +81,14 @@
   background-color: var(--warning);
 }
 
-.filtername-box [class*="multiValue"] {
+.multi-select [class*="multiValue"]  {
   color: white;
   background-color: var(--primary);
 }
-.filtername-box [class*="multiValue"] div {
+.multi-select [class*="multiValue"] div {
   color: white;
 }
-.filtername-box [class*="multiValue"] div:hover {
+.multi-select [class*="multiValue"] div:hover {
   color: white;
 }
 
