add component to view

--- a/src/views/notificationProfileView/NotificationProfileView.css
+++ b/src/views/notificationProfileView/NotificationProfileView.css
@@ -1,5 +1,4 @@
-.calendar {
-  margin: 50px 200px 200px 200px;
-  box-shadow: 0px 1px 5px 1px #c5c5df;
-  height: 100%;
+.profileList-container {
+  margin: 5vw;
+  margin: auto;
 }
