--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -2,12 +2,14 @@
 .notification-container {
   display: grid;
   grid-template-areas: "activeBox  timeslot filter media  buttons";
-  grid-template-columns: auto 20vw 20vw 20vw 130px;
+  grid-template-columns: 90px auto auto auto 140px;
   margin: auto;
   margin-top: 10px;
   border-radius: 5px;
-  box-shadow: 0px 1px 5px 1px #b6b6b6;
+  box-shadow: var(--boxshadow) ;
   padding: 0 10px 0 10px;
+  width: 90vw;
+  background-color: var(--boxbackground);
 }
 .notification-container h4 {
   margin: 5px 0 5px 0;
@@ -64,15 +66,7 @@
 .check-box .MuiCheckbox-colorPrimary.Mui-checked {
   color: var(--primary);
 }
-.add-button .MuiFab-primary {
-  color: #fff;
-  background-color: var(--primary); 
-}
 
-.add-button .MuiFab-primary:hover {
-  color: #fff;
-  background-color: var(--primary-dark); 
-}
 
 .buttons-container .MuiButton-containedPrimary:hover {
   background-color: var(--primary);
