--- a/src/components/react-table/table.css
+++ b/src/components/react-table/table.css
@@ -12,17 +12,18 @@
   );
   width: 80vw;
   height: var(--table-height);
-  box-shadow: 0px 1px 5px 1px #c5c5df;
+  box-shadow: var(--boxshadow);
   border: none !important;
   border-radius: 5px;
   z-index: 0;
+  background-color: var(--boxbackground);
 }
 
 
 #root .ReactTable .rt-thead.-header {
   color: var(--table-header-font-color);
   background-color: var(--table-header-color);
-  box-shadow: 0 2px 15px 0 #c5c5df;
+  box-shadow: var(--boxshadow);
   font-weight: 500;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
