--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -36,6 +36,7 @@
     grid-area: buttons;
     align-items: baseline;
     justify-items: baseline;
+    margin-top: 30px;
 }
 .headerbutton {
     text-decoration: none;
@@ -44,6 +45,7 @@
     color: var(--headerbutton);
     font-weight: 400;
     font-size: 1.2rem;
+
 }
 #header-timeslots {
     margin: auto;
@@ -51,21 +53,24 @@
 }
 
 #header-user {
+    width: 110px;
     margin: auto;
     order: 4;
     position: relative;
+    margin-right: 20px;
 }
 
 
 #header-filters {
     margin: auto;
-    order: 3;
+    order: 2;
 }
 
 #header-notificationProfiles {
     margin: auto;
-    order: 2;
+    order: 3;
 }
+
 
 #header-user:hover, #header-timeslots:hover, #header-notificationProfiles:hover, #header-logout:hover, #header-filters:hover, #header-profiles:hover {
     color: var(--secondary);
@@ -84,8 +89,11 @@
 }
 
 .dropdown-content {
-    width: 100px;
+    width: auto;
     position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px ;
     display: none;
@@ -93,8 +101,13 @@
     z-index: 1;
 }
 
-.dropdown-button {
-    margin: 0.7vh;
+.dropdown-content .dropdown-button {
+    font-size: 1.2rem;
+    font-weight: 400;
+    font-family: inherit;
+    margin: auto;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
     height: 2em;
     display: block;
     background-color: var(--headercolor);
